# LRP-supplementary

./: LRP-supplementary.cabal
MK/: MK.hs
SLD/: SLD.hs
UNI/: Term.hs  Unify.hs
